--- a/templates/twitter.html
+++ b/templates/twitter.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Friendfeed</title>
-    <script type="text/javascript" src="/static/twitter-widgets.js"></script>
+    <script type="text/javascript" src="{{ static_url('twitter-widgets.js') }}"></script>
   </head>
   <body>
     <h1>Friendfeed: Twitter Feed</h1>
@@ -23,4 +23,5 @@
      twttr.widgets.createTweet(id, document.getElementById('tweet-' + id));
    }
   </script>
+  <script type="text/javascript" src="{{ static_url('twitter-streaming.js') }}"></script>
 </html>
